# social-engineering-detection

./: CLAUDE.md  LICENSE  Lit Review Matrix.xlsx  README.md  env.example  pyproject.toml  requirements.txt
analysis/: main_analysis.ipynb  requirements.txt
analysis_output/: auc_summary_all_scenarios.xlsx  confusion_for_scenario__pv_detection__balanced.xlsx  confusion_for_scenario__pv_detection__high_precision.xlsx  confusion_for_scenario__pv_detection__high_recall.xlsx  confusion_for_scenario__pv_on_time__balanced.xlsx  confusion_for_scenario__pv_on_time__high_precision.xlsx  confusion_for_scenario__pv_on_time__high_recall.xlsx  confusion_for_scenario__se_detection__balanced.xlsx  confusion_for_scenario__se_detection__high_precision.xlsx  confusion_for_scenario__se_detection__high_recall.xlsx  confusion_for_scenario__se_prevention__balanced.xlsx  confusion_for_scenario__se_prevention__high_precision.xlsx  confusion_for_scenario__se_prevention__high_recall.xlsx  confusion_turn_violation_vs_pv__balanced.xlsx  confusion_turn_violation_vs_pv__high_precision.xlsx  confusion_turn_violation_vs_pv__high_recall.xlsx  conversation_recall_aggregation_rules.xlsx  detection_coverage.xlsx  heatmap_auc__pv_detection.xlsx  heatmap_auc__pv_on_time.xlsx  heatmap_auc__se_detection.xlsx  heatmap_auc__se_prevention.xlsx  heatmap_prompted_x_actual_cialdini.xlsx  hist_violations_by_type_x_representative__benign.xlsx  hist_violations_by_type_x_representative__threat.xlsx  latency_percentiles.xlsx  roc__pv_detection__by_benign_context.xlsx  roc__pv_detection__by_cialdini.xlsx  (+20 more)
web_demo/: app.py  (+7 more)
(+32 files in other folders)
