[project]
name = "social-engineering-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pydantic>=2.6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "ibis-framework[duckdb]>=9.0",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "kaleido>=0.2",
]